// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsAttribute renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 0.5,
        "flex": 1,
        "height": 44,
        "justifyContent": "center",
        "marginLeft": 15,
        "paddingRight": 30,
      },
      Object {
        "borderBottomColor": "#C8C8CC",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "color": "#000000",
        },
        Object {
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
        },
      ]
    }
  >
    8e69990a-32bf-4daf-9a40-2be6c45dad18
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "color": "#000000",
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 22,
            "position": "absolute",
            "right": 15,
            "textAlign": "right",
            "width": "60%",
          },
          Object {
            "color": "#8E8E93",
          },
        ],
      ]
    }
  >
    8ed9d949-9a68-4a3d-b69d-0856a632dacc
  </Text>
</View>
`;

exports[`SettingsAttribute renders correctly as the last item 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 0.5,
        "flex": 1,
        "height": 44,
        "justifyContent": "center",
        "marginLeft": 15,
        "paddingRight": 30,
      },
      Object {
        "borderBottomColor": "#C8C8CC",
      },
      Object {
        "borderBottomWidth": 0,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "color": "#000000",
        },
        Object {
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
        },
      ]
    }
  >
    8e69990a-32bf-4daf-9a40-2be6c45dad18
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "color": "#000000",
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 22,
            "position": "absolute",
            "right": 15,
            "textAlign": "right",
            "width": "60%",
          },
          Object {
            "color": "#8E8E93",
          },
        ],
      ]
    }
  >
    8ed9d949-9a68-4a3d-b69d-0856a632dacc
  </Text>
</View>
`;
